--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "angular": "1.3.8",
     "todomvc-common": "^1.0.1",
     "todomvc-app-css": "^1.0.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-jscs": "^3.0.0",
+    "gulp-jshint": "^1.11.2",
+    "jshint-stylish": "^2.0.1"
   }
 }
