--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "private": true,
   "dependencies": {
     "angular": "1.3.8",
-    "todomvc-common": "^1.0.1",
-    "todomvc-app-css": "^1.0.1"
+    "angular-route": "^1.4.7",
+    "todomvc-app-css": "^1.0.1",
+    "todomvc-common": "^1.0.1"
   }
 }
