--- a/package.json
+++ b/package.json
@@ -5,5 +5,18 @@
     "angular-route": "^1.4.7",
     "todomvc-app-css": "^1.0.1",
     "todomvc-common": "^1.0.1"
+  },
+  "devDependencies": {
+    "del": "^2.0.2",
+    "gulp": "^3.9.0",
+    "gulp-angular-templatecache": "^1.7.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jscs": "^3.0.1",
+    "gulp-jshint": "^1.11.2",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-uglify": "^1.4.1",
+    "gulp-useref": "^1.3.0",
+    "jshint-stylish": "^2.0.1"
   }
 }
