--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "private": true,
+  "scripts": {
+    "build": "gulp build"
+  },
   "dependencies": {
     "angular": "1.3.8",
-    "angular-route": "^1.4.7",
+    "angular-route": "1.4.7",
     "todomvc-app-css": "^1.0.1",
     "todomvc-common": "^1.0.1"
   },
